# BoneAge-Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
bench/: infer_test.js  load_test.js
benchmark/: boneAgeTest.js
code/: CMakeLists.txt  bone_info.h  boneageserver.cc  config.h  main.cpp  server.cc
code/buffer/: buffer.cpp  buffer.h
code/context/: context.cc  context.h  executor.cc  executor.h  thread_pool.cc  thread_pool.h
code/http/: httpapplication.cc  httpapplication.h  httpconn.cpp  httpconn.h  httpcontext.h  httprequest.cc  httprequest.cpp  httprequest.h  httpresponse.cc  httpresponse.cpp  httpresponse.h  middleware.cc  middleware.h  router.cc  router.h
code/inference/: boneage_inference.cc  boneage_inference.h
code/log/: blockqueue.h  log.cpp  log.h
code/logging/: logger.cc  logger.h
code/main/: server.cpp  test_cuda.cpp
code/net/: acceptor.cc  acceptor.h  buffer.cc  buffer.h  channel.cc  channel.h  epoller.cc  epoller.h  eventloop.cc  eventloop.h  eventloopthread.cc  eventloopthread.h  eventloopthreadpool.cc  eventloopthreadpool.h  inetaddress.cc  inetaddress.h  socket.cc  socket.h  tcpconnection.cc  tcpconnection.h  tcpserver.cc  tcpserver.h
code/nn/: classify.cc  classify.h  detect.cc  detect.h
code/onnx/: BoneAgeCls.cpp  BoneAgeCls.h  YOLO.cpp  YOLO.h  inference.cpp  inference.h  test.h
code/pool/: sqlconnRAII.h  sqlconnpool.cpp  sqlconnpool.h  threadpool.h
code/queue/: blockqueue.h
code/server/: EventLoop.cpp  epoller.cpp  epoller.h  webserver.cpp  webserver.h
code/sql/: sqlconnpool.cc  sqlconnpool.h
code/test/: client.cpp  server.cpp  test_all.cpp
code/timer/: heaptimer.cpp  heaptimer.h
code/types/: types.h
code/util/: InetAddress.cpp  InetAddress.h  Socket.h  util.cpp  util.h
code/utils/: utils.cc  utils.h
new_res/: index.html  test.html
res/: index.html  login.html  scripts.js  styles.css
res/css/: styles.css
res/js/: scripts.js
tests/: CMakeLists.txt  test_acceptor.cc  test_buffer.cc  test_classify.cc  test_eventloop.cc  test_eventloopthread.cc  test_httprequest.cc  test_httpresponse.cc  test_inetaddress.cc  test_inference.cc  test_socket.cc  test_sqlconnpool.cc  test_tcpconnection.cc  test_yolo.cc
